add html webpack plugin, create node server

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
   },
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "server": "nodemon ./src/server/index.js",
+    "start": "webpack serve",
+    "dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -29,7 +33,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "mongoose": "^6.0.4",
+    "mongoose": "^5.13.8",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
