--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "autoprefixer": "^10.3.4",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.3.6",
+    "postcss-csso": "^5.0.1",
+    "postcss-loader": "^6.1.1",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.2",
     "webpack-cli": "^4.8.0",
