add bundle analyzer scipts,helmet,and first test route

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,7 @@
   },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-one-expression-per-line": [0, { "allow": "literal" }],
+    "react/no-unescaped-entities": 0,
   }
 }
